Include 'Makefile.user' before any rules.
If target is defined by a variable, then GNU Make generates target name
in-place, taking current variable value, rather than leaving variable
target names for lazy evaluation. Prerequisites are lazy-evaluated on the
other hand. If path variable was overriden, but does not point to correct
location, it leads to "no rule to make target" scenario.

With this fix rule can provide information about path variable being set
incorrectly.

--- a/Makefile.i686-w64-mingw32.toolchain
+++ b/Makefile.i686-w64-mingw32.toolchain
@@ -201,6 +201,10 @@ XZCAT = $(MSYS_BIN_DIR)/xzcat.exe
 XZDEC = $(MSYS_BIN_DIR)/xzdec.exe
 
 
+# Makefile.user may override variables defined elsewhere.
+-include $(dir $(abspath $(lastword $(MAKEFILE_LIST))))Makefile.user
+
+
 .PHONY: msys-awk-bin msys-bash-bin msys-bzip2-bin msys-coreutils-bin \
 msys-coreutils-ext msys-diffutils-bin msys-file-bin msys-findutils-bin \
 msys-grep-bin msys-groff-bin msys-gzip-bin msys-less-bin msys-make-bin \
