--- a/external/recipes/i686-w64-mingw32/libgit2/Makefile
+++ b/external/recipes/i686-w64-mingw32/libgit2/Makefile
@@ -10,11 +10,11 @@ include ../pkg-config-lite/Makefile.include
 include Makefile.include
 
 PRODUCT_NAME = libgit2
-PRODUCT_VERSION = 0.27.3
-PRODUCT_DIRNAME = $(PRODUCT_NAME)-v$(PRODUCT_VERSION)
+PRODUCT_VERSION = 0.27.4
+PRODUCT_DIRNAME = $(PRODUCT_NAME)-$(PRODUCT_VERSION)
 PRODUCT_PORT_SUFFIX = $(TARGET_MACHINE)
 PRODUCT_ARCHIVE = $(PRODUCT_NAME)-v$(PRODUCT_VERSION).tar.gz
-PRODUCT_ARCHIVE_URL =  https://gitlab.com/libgit2/libgit2/-/archive/v$(PRODUCT_VERSION)/$(PRODUCT_ARCHIVE)
+PRODUCT_ARCHIVE_URL = http://sources.buildroot.net/libgit2/$(PRODUCT_ARCHIVE)
 PRODUCT_ARCHIVE_DIR = $(ARCHIVE_DIR)
 PRODUCT_ARCHIVE_PATH = $(PRODUCT_ARCHIVE_DIR)/$(PRODUCT_ARCHIVE)
 
@@ -75,6 +75,7 @@ buildconfigure $(PRODUCT_BUILD_DIR)/Makefile: \
 		-DCMAKE_INSTALL_PREFIX=$(LIBGIT2_INSTALL_DIR) \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_VERBOSE_MAKEFILE=ON \
+		-DTHREADSAFE=ON \
 		-G "MSYS Makefiles" \
 		2>&1 | $(TEE) $(PRODUCT_CONFIGURE_TXT_PATH)
 
