--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ modules/test_*
 # Temporary external artifacts and deployment (may become submodule).
 external/_temp
 external/deploy
+external/deploy.*
 
 # Batch file, which sets up custom environment.
 userEnv.bat
