--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ variables:
   QBS_BASE_PROFILE: "x86_64-linux-gnu-gcc-7"
   QBS_CONFIG: "debug"
   QBS_PROFILE: "qt"
-  QBS_AUTOTEST_ARGUMENTS: "-platform xcb"
   QT_DEBUG_PLUGINS: 0
   XDG_RUNTIME_DIR: "/tmp/runtime-kdeci/"
   DISPLAY: ":90"
@@ -117,15 +116,15 @@ clang ubuntu-18.04-qt-5.13.1 release build:
     - "2"
     - "3"
     - merge_requests
-#  artifacts:
-#    paths:
-#      - build_tests/$QBS_CONFIG
-#    expire_in: 24h
+  artifacts:
+    paths:
+      - build_tests/$QBS_CONFIG/install-root
+    expire_in: 24h
   script:
     - echo "Qbs base profile:" $QBS_BASE_PROFILE
     - echo "Qbs profile:" $QBS_PROFILE
     - echo "Qbs config:" $QBS_CONFIG
-    - qbs build -f TestCuteHMI.qbs -d build_tests modules.autotest.arguments:'[$QBS_AUTOTEST_ARGUMENTS]' profile:$QBS_PROFILE config:$QBS_CONFIG
+    - qbs build -f TestCuteHMI.qbs -d build_tests profile:$QBS_PROFILE config:$QBS_CONFIG
 
 
 .build_tests_ubuntu-18.04-qt-5.13.1:
@@ -162,8 +161,15 @@ gcc ubuntu-18.04-qt-5.13.1 debug build tests:
     - "2"
     - "3"
     - merge_requests
+  artifacts:
+    expire_in: 24h
+    paths:
+      - build_tests/$QBS_CONFIG/install-root/user/local/cutehmi
+    reports:
+      junit:
+        - build_tests/$QBS_CONFIG/install-root/usr/local/cutehmi/app/*.xunit.xml
   script:
-    - qbs build -f TestCuteHMI.qbs -d build_tests -p autotest-runner --jobs 1 modules.autotest.arguments:'[$QBS_AUTOTEST_ARGUMENTS]' profile:$QBS_PROFILE config:$QBS_CONFIG
+    - qbs build -f TestCuteHMI.qbs -d build_tests -p autotest-runner profile:$QBS_PROFILE config:$QBS_CONFIG
 
 gcc ubuntu-18.04-qt-5.13.1 debug test:
   image: "cutehmi/qt:ubuntu-18.04-qt-5.13.1"
