Implement l10n-kf5 messages extraction procedure
This Makefile target is intended to be used for test purposes. The real
translation process is handled by 'scripty'.

--- a/Makefile.project
+++ b/Makefile.project
@@ -67,6 +67,9 @@ DOCPRODENTRY = awkgward/docprodentry.sh
 
 INCLUDE_GUARDS_EXCLUDE = ! -path 'extensions/templates_*'
 
+# URL of l10n-kf5 repository.
+L10N-KF5_URL = svn://anonsvn.kde.org/home/kde/trunk/l10n-kf5/scripts
+
 
 
 include $(dir $(abspath $(lastword $(MAKEFILE_LIST))))Makefile.toolchain
